# internal/dto/web_response.go
@@ -1,9 +1,17 @@
 package dto
 
 type WebResponse struct {
-	Code    int    `json:"code,omitempty"`
-	Status  string `json:"status,omitempty"`
-	Message string `json:"message,omitempty"`
-	Error   string `json:"error,omitempty"`
-	Data    any    `json:"data,omitempty"`
+	Code       int         `json:"code,omitempty"`
+	Status     string      `json:"status,omitempty"`
+	Message    string      `json:"message,omitempty"`
+	Error      string      `json:"error,omitempty"`
+	Data       any         `json:"data,omitempty"`
+	Pagination *Pagination `json:"pagination,omitempty"`
+}
+
+type Pagination struct {
+	Page       int `json:"page,omitempty"`
+	Limit      int `json:"limit,omitempty"`
+	Total      int `json:"total,omitempty"`
+	TotalPages int `json:"total_pages,omitempty"`
 }
